# wildberries-fast-mcp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
wbmcp/: __main__.py  load.py
