[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildberries-fast-mcp"
version = "0.0.5"
description = "Wildberries FULL MCP server (contains all API endpoints)"
readme = "README.md"
dependencies = ["fastmcp", "httpx", "PyYAML"]

[project.urls]
Repository = "https://github.com/bigancientmammoth/wildberries-fast-mcp"
